Show margin property better.

--- a/my-app/src/styles/Gallery.css
+++ b/my-app/src/styles/Gallery.css
@@ -5,12 +5,13 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    padding: 10;
-    margin: 5;
+    padding: 10px;
+    margin: 5px;
     list-style: none;
 }
 
 .flex-item {
     padding: 10px;
+    margin: 10px;
     background-color: yellow;
 }
